starting finalizing accessbility items

--- a/index.html
+++ b/index.html
@@ -58,29 +58,29 @@
                 <img class="aboutMeBodyImg" src="imgs/meRN.JPG" alt="Jake">
                 <div class="text">
                     <h2 class="head">About Me</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
                 </div>
             </div>
             <div class="colsmall">
                 <div class="col education">
                     <div class="text">
                         <h2 class="head">Education</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
                     </div>            
                 </div>
                 <div class="col goals">
                     <div class="text">
                         <h2 class="head">Goals</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                            sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
                     </div>
                 </div>
             </div>
@@ -88,17 +88,19 @@
                 <img class="aboutMeBodyImg" src="imgs/NortonChildren.jpg" alt="Norton Children's Hospital"> 
                 <div class="text">
                     <h2 class="head">Experience</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                        sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
                 </div>          
             </div>
             <div class="col awards">
                 <div class="text">
                     <h2 class="head">Awards</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>        
+                    <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+                        sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>      
                 </div>
             </div>
             <div class="col inspirations">
@@ -106,35 +108,35 @@
                 <div class="insp_icon">
                     <a href="#" class="rick">
                         <img src="imgs/rick.jpg" alt="Photo of Richard St. Germain">
-                        <h4>Richard St. Germain</h4>
+                        <h3>Richard St. Germain</h3>
                     </a>
                     <a href="https://github.com/jacobkastensmidt" class="jpp">
                         <img src="imgs/jpp.jpg" alt="Photo of Jacob Kastensmidt">
-                        <h4>Jacob Kastensmidt</h4>
+                        <h3>Jacob Kastensmidt</h3>
                     </a>
                     <a href="https://github.com/bradcypert" class="brad">
                         <img src="imgs/brad.jpg" alt="Photo of Brad Cypert">
-                        <h4> Brad Cypert</h4>
+                        <h3> Brad Cypert</h3>
                     </a>
                     <a href="https://github.com/ethdmill" class="ethan">
                         <img src="imgs/ethan.jpg" alt="Photo of Ethan Miller">
-                        <h4>Ethan Miller</h4>
+                        <h3>Ethan Miller</h3>
                     </a>
                     <a href="https://github.com/mattbalmer" class="matt">
                         <img src="imgs/matt.jpg" alt="Photo of Matt Balmer">
-                        <h4>Matt Balmer</h4>
+                        <h3>Matt Balmer</h3>
                     </a>
                     <a href="https://www.linkedin.com/in/christine-seaman-1ab412a4/" class="christine">
                         <img src="imgs/christine.jpg" alt="Photo of wife Christine St. Germain">
-                        <h4>Christine St. Germain</h4>
+                        <h3>Christine St. Germain</h3>
                     </a>
                     <a href="https://www.linkedin.com/in/thomas-walker-9b803a12b/" class="drew">
                         <img src="imgs/drew.jpg" alt="Photo of Thomas &quot;Drew&quot; Walker">
-                        <h4>Drew Walker</h4>
+                        <h3>Drew Walker</h3>
                     </a>
                     <a href="https://www.linkedin.com/in/paige-saint-germain-5a125b16b/" class="paige">
                         <img src="imgs/paige.jpg" alt="Photo of sister Paige Saint Germain">
-                        <h4>Paige Saint Germain</h4>
+                        <h3>Paige Saint Germain</h3>
                     </a>
                 </div>
             </div>
