Removed some Lorem Ipsums, format changes

--- a/index.html
+++ b/index.html
@@ -58,29 +58,34 @@
                 <img class="aboutMeBodyImg" src="imgs/meRN.JPG" alt="Jake">
                 <div class="text">
                     <h2 class="head">About Me</h2>
-                        <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
+                        <p><strong> Hi! I’m Jake St. Germain and I am an aspiring software developer. After nearly 5 years of being a Pediatric ICU Nurse, I
+                            decided to pursue a longtime goal of mine and learn how to code. I have always had a love for tech and shown an aptitude for
+                            learning quickly in the tech area. My time in the ICU has helped me to remain calm, cool, and collected under pressure and,
+                            ideally, I will start to contribute to the tech space soon! </strong></p>
+                        <p><strong> Random tidbits! Like the headline says, I am a cat enthusiast and have three of the fluffy jerks. I have built computers 
+                            for myself and a few of my friends, recently re-learned how to play the trombone, and love spending time on my 
+                            <a href="https://onewheel.com/" rel="noopener" target="_blank">OneWheel!</a> I also like to spend my free time 
+                            playing video games but lately I have been replacing that problem-solving itch with coding. </strong></p>
                 </div>
             </div>
             <div class="colsmall">
                 <div class="col education">
                     <div class="text">
                         <h2 class="head">Education</h2>
-                        <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
+                        <p><strong> Starting with college, I attended the University of Louisville where I graduated with my Bachelors of Science in Nursing. My
+                            overall GPA was a 3.7/4.0 and I found myself on the Dean’s List for 3 Semesters and as a Dean’s Scholar for 2 Semesters. This was all
+                            while having two jobs for most of those semesters! While being a nurse I strove for additional training in Pediatric Advanced Life Support
+                            (PALS) as well as in PRISMA (Continuous Dialysis). Now time for coding! I started my dev career with Code Louisville through their front end course.
+                            This also gave me access to Team Treehouse where I continued to soak in as much development knowledge as I could.</strong></p>
                     </div>            
                 </div>
                 <div class="col goals">
                     <div class="text">
                         <h2 class="head">Goals</h2>
-                        <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                            sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
+                        <p><strong> My first and foremost goal is to gain more experience in development. I hope to do as many sessions of Code Louisville as I 
+                            can and continue to work through Team Treehouse’s catalog of coding education. I also hope to start to work in the tech industry soon!
+                            My overall goal is to make software that, overall, helps people live better lives. I hope to utilize my experience in nursing and
+                            apply to wherever I end up!</strong></p>
                     </div>
                 </div>
             </div>
@@ -88,20 +93,33 @@
                 <img class="aboutMeBodyImg" src="imgs/NortonChildren.jpg" alt="Norton Children's Hospital"> 
                 <div class="text">
                     <h2 class="head">Experience</h2>
-                    <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>
+                    <p><strong> I worked pretty hard in college. In addition to a pretty difficult curriculum, I rotated through various positions within 
+                        the Student Housing department at UofL. I was a Resident Assistant for four years, worked a desk/security job for a year, worked 
+                        low-level maintenance/IT for a year, and then coordinated maintenance in two buildings on campus for two years. I also held many 
+                        of these jobs at the same time! </strong></p>
+                    <p><strong> While in the Peds ICU, I chose to receive additional, non-necessary training and became Pediatric Advanced Life Support 
+                        (PALS) certified. I also took additional training as well as in Continuous Renal Replacement Therapy (CRRT) which is basically 
+                        dialysis. I also precepted (or trained) nurses that were new or our ICU and passed along what I knew!</strong></p>
+                    <p><strong> My coding experiences right now are limited to HTML, CSS, and JavaScript. I intend to keep working on perfecting 
+                        these skills and am excited to start learning more languages, methods, and technologies soon!</strong></p>
                 </div>          
             </div>
             <div class="col awards">
-                <div class="text">
-                    <h2 class="head">Awards</h2>
-                    <p><strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
-                        sunt in culpa qui officia deserunt mollit anim id est laborum.</strong></p>      
-                </div>
+                <h2>Awards and Leadership</h2>
+                <div class="listview">  
+                    <ul><strong>
+                        <li>Press Ganey Care Award (2016)</li>
+                        <li>Preceptor of the Year (2017)</li>
+                        <li>Nurse of Year FINALIST (2018)</li>
+                        <li>Nurse of the Year Nominee (2020)</li>
+                    </ul></strong> 
+                    <ul><strong> 
+                        <li>Unit Based Council Chair (2017-2020)</li>
+                        <li>Hospital Wide Practice Council (2017-2020)</li>
+                        <li>Transitional Leadership Committee (2017-2020)</li>
+                        <li>Instructor and Student, Koru Mindfulness (2016))</li>
+                    </ul></strong> 
+                </div>   
             </div>
             <div class="col inspirations">
                 <h2>Influences</h2>
