--- a/socialmedia.html
+++ b/socialmedia.html
@@ -53,7 +53,7 @@
         <p class="tagline">Follow, subscribe, like, etc. I'm here for a good, wholesome time.</p>
     </header>
     <main role =”main”> 
-        <a href="https://www.tiktok.com/@jakesaintg" class="big tiktok">
+        <a href="https://www.tiktok.com/@jakesaintg" rel="noopener" target="_blank" class="big tiktok">
             <span class="sprite" alt="TikTok Logo"></span> 
             <div class="text">
                 <h2 class="head">TikTok</h2>
@@ -62,14 +62,14 @@
                 </p>
             </div>
         </a>
-        <a href="https://github.com/jakesaintg/" class="big github">
+        <a href="https://github.com/jakesaintg/" rel="noopener" target="_blank" class="big github">
             <span class="sprite" alt="GitHub Logo"></span>
             <div class="text">
                 <h2 class="head">GitHub</h2>
                 <p>I try to stay busy and keep my skills up-to-date. Some projects are more complete than others but I have learned from each and every one!</p>
             </div>
         </a>
-        <a href="https://www.linkedin.com/in/jake-st-germain-b6a3a293/" class="big linkedin">
+        <a href="https://www.linkedin.com/in/jake-st-germain-b6a3a293/" rel="noopener" target="_blank" class="big linkedin">
             <span class="sprite" alt="Linkedin Logo"></span>
             <div class="text">
                 <h2 class="head">Linkedin</h2>
@@ -81,7 +81,7 @@
             <h2>Minecraft Servers</h2>
             <p>Please be respectful if you join!</p>
             <div>
-                <a href="https://realms.gg/1QpRIVv-ozE" class="bedrock"> 
+                <a href="https://realms.gg/1QpRIVv-ozE" rel="noopener" target="_blank" class="bedrock"> 
                     <img height=160px width=160px src="imgs/bedrock.png" alt="Minecraft Bedrock Logo">
                     <div>
                         <h2 class="head">Bedrock</h2>
@@ -89,7 +89,7 @@
                         </p>
                     </div>
                 </a>
-                <a href="mailto:jakestgermain@outlook.com?subject=Server IP Request&body=Hello! I would like to be added to the Java Minecraft Server! I wish to play casual survival Minecraft with a bunch of easy-going nerds. By sending this email, I am aware that griefing and theft will not be tolerated." class="java">
+                <a href="mailto:jakestgermain@outlook.com?subject=Server IP Request&body=Hello! I would like to be added to the Java Minecraft Server! I wish to play casual survival Minecraft with a bunch of easy-going nerds. By sending this email, I am aware that griefing and theft will not be tolerated." rel="noopener" target="_blank" class="java">
                     <img height=160px width=160px src="imgs/java.png" alt="Minecraft Realms Logo">
                     <div>
                         <h2 class="head">Java</h2>
@@ -101,18 +101,18 @@
         </div>
         <div class="smallsocial">
             <a href="https://linktr.ee/JakeSaintG" class="small linktree">
-                <span class="smallsprite" alt="Linktree Logo"></span>
+                <span class="smallsprite" rel="noopener" target="_blank" alt="Linktree Logo"></span>
                 <h3>LinkTree</h3>
             </a>
-            <a href="https://old.reddit.com/user/JakeSaintG/" class="small reddit">
+            <a href="https://old.reddit.com/user/JakeSaintG/" rel="noopener" target="_blank" class="small reddit">
                 <span class="smallsprite" alt="Reddit Logo"></span>
                 <h3>Reddit</h3>
             </a>
-            <a href="https://twitter.com/jakesaintg" class="small twitter">
+            <a href="https://twitter.com/jakesaintg" rel="noopener" target="_blank" class="small twitter">
                 <span class="smallsprite" alt="Twitter Logo"></span>
                 <h3>Twitter</h3>
             </a>
-            <a href="https://www.instagram.com/jakesaintg/" class="small instagram">
+            <a href="https://www.instagram.com/jakesaintg/" rel="noopener" target="_blank"class="small instagram">
                 <span class="smallsprite" alt="Instagram Logo"></span>
                 <h3>Instagram</h3>
             </a>
