--- a/blog.html
+++ b/blog.html
@@ -83,11 +83,8 @@
                     <h3 class="post_date">11/14/2020</h3>
                 </div>
             </div>
-            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
+            <p class="post_content"> Post Coming Soon! It is missing site development because it's largely incomplete. 
+                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
 
             </p>
         </article>
@@ -99,11 +96,8 @@
                     <h3 class="post_date">10/30/2020</h3>
                 </div>
             </div>
-            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
+            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
+                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned! 
 
             </p>
         </article>
@@ -115,11 +109,8 @@
                     <h3 class="post_date">10/12/2020</h3>
                 </div>
             </div>
-            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
+            <p class="post_content">Post Coming Soon! It is missing during site development because it's largely incomplete. 
+                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
 
             </p>
         </article>
@@ -131,29 +122,22 @@
                     <h3 class="post_date">9/20/2020</h3>
                 </div>
             </div>
-            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
+            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
+                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
 
             </p>
         </article>
         <article class="post_full">
             <div class="post_head">
-                <h1 class="post_title">Dev Blog 3: I’ve been bad..</h1>
+                <h1 class="post_title">Dev Blog 3: I Goofed..</h1>
                 <div class="post_details">
                     <h3 class="post_author">By: Jake St. Germain</h3>
                     <h3 class="post_date">9/3/2020</h3>
                 </div>
             </div>
-            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
+            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
+                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
+
             </p>
         </article>
         <article class="post_full">
@@ -164,10 +148,9 @@
                     <h3 class="post_date">8/10/2020</h3>
                 </div>
             </div>
-            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
+            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
+                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
+
             </p>
         </article>
         <article class="post_full">
@@ -178,10 +161,9 @@
                     <h3 class="post_date">8/2/2020</h3>
                 </div>
             </div>
-            <p class="post_content">post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
-                post post post post post post post post post post post post post post post post post post post post post 
+            <p class="post_content">Post Coming Soon! It is missing site development because it's largely incomplete. 
+                I would love to turn my notes/ramblings/journal entries into full-fledged Blog Entries soon! Stay tuned!
+
             </p>
         </article>
     </main>
