--- a/socialmedia.html
+++ b/socialmedia.html
@@ -66,7 +66,9 @@
             <span class="sprite" alt="GitHub Logo"></span>
             <div class="text">
                 <h2 class="head">GitHub</h2>
-                <p>I try to stay busy and keep my skills up-to-date. Some projects are more complete than others but I have learned from each and every one!</p>
+                <p>I try to stay busy and I am constantly trying to learn new things. I tend to upload most of my projects/tinkerings. 
+                    As I learn, I hope to return of some of the old projects to keep my skills up-to-date. Some of these are more complete than others
+                    but I have learned from each and every one!</p>
             </div>
         </a>
         <a href="https://www.linkedin.com/in/jake-st-germain-b6a3a293/" rel="noopener" target="_blank" class="big linkedin">
