--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             <div class="col awards">
                 <h2>Awards and Leadership</h2>
                 <div class="listview">  
-                    <ul><strong>
+                    <strong></strong><ul>
                         <li>Press Ganey Care Award (2016)</li>
                         <li>Preceptor of the Year (2017)</li>
                         <li>Nurse of Year FINALIST (2018)</li>
                         <li>Nurse of the Year Nominee (2020)</li>
                     </ul></strong> 
-                    <ul><strong> 
+                    <strong><ul>
                         <li>Unit Based Council Chair (2017-2020)</li>
                         <li>Hospital Wide Practice Council (2017-2020)</li>
                         <li>Transitional Leadership Committee (2017-2020)</li>
