--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="col awards">
                 <h2>Awards and Leadership</h2>
                 <div class="listview">  
-                    <strong></strong><ul>
+                    <strong><ul>
                         <li>Press Ganey Care Award (2016)</li>
                         <li>Preceptor of the Year (2017)</li>
                         <li>Nurse of Year FINALIST (2018)</li>
