--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
             </div>
             <div class="post_content">
                 <label for="post_content">Post:</label>
-                <textarea id="post_content" name="post_content" required="required"></textarea>
+                <textarea id="post_content" name="post_content" rows=10 required="required"></textarea>
                 <button type="button" value="Submit" class="post_submit" onclick="populatePost()">Submit</button>
             </div>
         </form>
